MyFirstForceProject/src/objects/Zappos_Shoes__c.object
<CustomObject>
    <fields>
        <fullName>Final_Price_shoes__c</fullName>
        <formula>Name__r.Shoe_price__c - ( Name__r.Shoe_price__c * Shoes_discount__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Final Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product_ID</label>
        <referenceTo>Levis_shoes__c</referenceTo>
        <relationshipLabel>Zappos_Shoes</relationshipLabel>
        <relationshipName>Zappos_Shoes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shoes_discount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Shoes_discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Shoes_quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Shoes_quantity</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Zappos Shoes</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Record_ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Zappos Shoes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>